--- a/src/index.css
+++ b/src/index.css
@@ -13,25 +13,47 @@ code {
     monospace;
 }
 
+.AppWrapper {
+  width: 560px;
+  margin: auto;
+}
+
 .SearchBar {
-  margin-bottom: 40px;
+  margin: 30px 0;
+  height: 30px;
+  width: 100%;
+  border: 1px solid #ccc;
 }
 
 .SearchResultsList {
   display: flex;
   flex-direction: column;
   align-content: flex-start;
-  width: 720px;
-  margin: auto;
 }
 
 .SearchResultsItem {
   background-color: #fff;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  padding: 15px;
 }
 
 .SearchResultsLogo {
   border-radius: 50%;
   width: 20px;
   height: 20px;
+}
+
+.SearchResultsHeading {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.SearchResultsHeading > p {
+  margin: 0 20px;
+}
+
+.SearchResultsItem > p {
+  margin-bottom: 0;
 }
